--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 https://download.pytorch.org/whl/cpu/torch-1.5.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
 https://download.pytorch.org/whl/cpu/torchvision-0.6.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
 voila
-fastai>=2
+fastai2
 pillow<7
 packaging
 ipywidgets==7.5.1
