--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 https://download.pytorch.org/whl/cpu/torch-1.5.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
 https://download.pytorch.org/whl/cpu/torchvision-0.6.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
 voila
-fastai>=2
-fastai2
+fastai==2.0.13
+fastbook==0.0.11
 pillow<7
 packaging
 ipywidgets==7.5.1
